--- a/Beat/Fade320x480.html
+++ b/Beat/Fade320x480.html
@@ -364,7 +364,7 @@
         </div>
         <div class="bf_text"> 
             <span class="bf_text_title bf_text_bold">
-             TU CONDUCTOR. <br> TU RUTA. TU CIUDAD.
+             TU CONDUCTOR, <br> TU RUTA, TU CIUDAD.
             </span>
             <br/>  
           <!--  <span class="bf_text_light bf_text_small" style="color:black;">
