--- a/Beat/Cube.html
+++ b/Beat/Cube.html
@@ -645,14 +645,23 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(-50%, -50%) translate(-1px, 83px) rotate(0deg);
         transform: translate(-50%, -50%) translate(-1px, 83px) rotate(0deg);
 }
+/*#/#*//*#i4.i388.image.css:image/base/css*/
+#i388 { opacity: 1; }
+/*#/#*//*#i388.i389.positioning.css:positioning/base/css.1*/
+#i388 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 250px;
+        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+}
 /*#/#*//*#i4.i130.image.css:image/base/css*/
 #i130 { opacity: 1; }
 /*#/#*//*#i130.i131.positioning.css:positioning/base/css.1*/
-#i130 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 328px;
-        -ms-transform: translate(0, 0) translate(0px, -30px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, -30px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, -30px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, -30px) rotate(0deg);
+#i130 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 252px; height: 275px;
+        -ms-transform: translate(0, 0) translate(20px, -12px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(20px, -12px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(20px, -12px) rotate(0deg);
+        transform: translate(0, 0) translate(20px, -12px) rotate(0deg);
 }
 /*#/#*//*#i4.i181.image.css:image/base/css*/
 #i181 { opacity: 1; }
@@ -787,6 +796,8 @@ url('fonts/') format('svg');
 <div id="i20"></div>
 <!--#/#--><!--#i4.i14.text.html:text/html-->
 <div id="i14">Realiza un Test Drive para la compra de tu nuevo Chevrolet.</div>
+<!--#/#--><!--#i4.i388.image.html:image/html-->
+<img id="i388" src="https://i.imgur.com/rHFnJ69.png"/>
 <!--#/#--><!--#i4.i130.image.html:image/html-->
 <img id="i130" src="https://i.imgur.com/wKa4gHV.gif"/>
 <!--#/#--><!--#i4.i181.image.html:image/html-->
@@ -857,6 +868,8 @@ document.getElementById('i2').addEventListener('showPrevious', function(e){
 document.getElementById('i2').addEventListener('showNext', function(e){
     cube_i2.rotate(cube_i2.ROTATE_NEXT)
 });
+/*#/#*//*#i4.i388.image.js:image/base/js*/
+
 /*#/#*//*#i4.i130.image.js:image/base/js*/
 
 /*#/#*//*#i4.i181.image.js:image/base/js*/
@@ -960,6 +973,11 @@ data: /*!*/{}/*!*/;
 name: Texto; customName: 1;
 /*#/#*//*#i14.i15.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
+/*#/#*//*#i4.i388.image.meta:image/meta*/
+name: Imagen de Cuadro copy; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: 1;
+/*#/#*//*#i388.i389.positioning.meta:positioning/meta.1*/
+data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i4.i130.image.meta:image/meta*/
 name: Imagen de Cuadro; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
