--- a/Beat/Slider_300x250.html
+++ b/Beat/Slider_300x250.html
@@ -214,7 +214,7 @@
                 <div style="margin-top:30px;">
                     <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#000028; font-size:17px; ">TU CONDUCTOR, TU RUTA, TU CIUDAD.</span> 
 
-                        <div class="cta" > <img src="https://i.imgur.com/1bOAqB3.png" style="height: 40px;"></a></div>
+                        <div class="cta" > <img src="https://i.imgur.com/45MatRy.png" style="height: 40px;"></a></div>
 
                         <img class="logo" style="margin-top: 5px;" src="https://i.imgur.com/Lc32Fgp.png" alt=""> </div>
                 </div>
