--- a/Beat/Venetian300x600.html
+++ b/Beat/Venetian300x600.html
@@ -2238,9 +2238,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i2.i4.slice-image.html:slice-image/html-->
 <dataimg id="i4" src="https://i.imgur.com/pHCnmJ3.gif"></dataimg>
 <!--#/#--><!--#i2.i5.slice-image.html:slice-image/html-->
-<dataimg id="i5" src="https://i.imgur.com/FaQAMMc.png"></dataimg>
+<dataimg id="i5" src="https://i.imgur.com/bk2CNat.png"></dataimg>
 <!--#/#--><!--#i2.i6.slice-image.html:slice-image/html-->
-<dataimg id="i6" src="https://i.imgur.com/vB3TwaE.png"></dataimg>
+<dataimg id="i6" src="https://i.imgur.com/FaQAMMc.png"></dataimg>
+<!--#/#--><!--#i2.i32.slice-image.html:slice-image/html.1-->
+<dataimg id="i32" src="https://i.imgur.com/SJkOwW7.png"></dataimg>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i16.image.html:image/html-->
@@ -2295,6 +2297,8 @@ document.addEventListener('DOMContentLoaded', function() {
 
 /*#/#*//*#i2.i6.slice-image.js:slice-image/base/js*/
 
+/*#/#*//*#i2.i32.slice-image.js:slice-image/base/js.1*/
+
 /*#/#*//*#i16.image.js:image/base/js*/
 
 /*#/#*//*#i16.i17.positioning.js:positioning/base/js.2*/
@@ -2337,9 +2341,12 @@ customName: ;
 /*#/#*//*#i2.i4.slice-image.meta:slice-image/meta*/
 name: pHCnmJ3.gif; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i5.slice-image.meta:slice-image/meta*/
-name: FaQAMMc.png; fileId: ; sourceTypeId: externalUrl;
+name: bk2CNat.png; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i6.slice-image.meta:slice-image/meta*/
-name: vB3TwaE.png; fileId: ; sourceTypeId: externalUrl;
+name: FaQAMMc.png; fileId: ; sourceTypeId: externalUrl;
+/*#/#*//*#i2.i32.slice-image.meta:slice-image/meta.1*/
+name: SJkOwW7.png; fileId: ; sourceTypeId: externalUrl;
+customName: false;
 /*#/#*//*#i2.i3.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i16.image.meta:image/meta*/
