--- a/PETCO_2/CUBE/main/Cube.html
+++ b/PETCO_2/CUBE/main/Cube.html
@@ -638,15 +638,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
-/*#/#*//*#i4.i258.image.css:image/base/css*/
-#i258 { opacity: 1; }
-/*#/#*//*#i258.i259.positioning.css:positioning/base/css.2*/
-#i258 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 250px;
-        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-}
 /*#/#*//*#i4.i14.text.css:text/base/css*/
 #i14 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 16px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -5px;}
 /*#/#*//*#i14.i15.positioning.css:positioning/base/css.1*/
@@ -732,15 +723,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
-/*#/#*//*#i5.i262.image.css:image/base/css*/
-#i262 { opacity: 1; }
-/*#/#*//*#i262.i263.positioning.css:positioning/base/css.2*/
-#i262 { position: absolute; top: 0px; left: 0px; overflow: hidden; width: 300px; height: 250px;
-        -ms-transform: translate(0, 0) translate(0, 0) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0, 0) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0, 0) rotate(0deg);
-        transform: translate(0, 0) translate(0, 0) rotate(0deg);
-}
 /*#/#*//*#i5.i58.image.css:image/base/css*/
 #i58 { opacity: 1; }
 /*#/#*//*#i58.i59.positioning.css:positioning/base/css.1*/
@@ -821,15 +803,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 }
 /*#/#*//*#i40.i41.positioning.css:positioning/base/css.1*/
 #i40 { position: absolute; top: 0px; left: 0px; overflow: hidden; width: 100%; height: 100%;
-        -ms-transform: translate(0, 0) translate(0, 0) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0, 0) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0, 0) rotate(0deg);
-        transform: translate(0, 0) translate(0, 0) rotate(0deg);
-}
-/*#/#*//*#i6.i272.image.css:image/base/css*/
-#i272 { opacity: 1; }
-/*#/#*//*#i272.i273.positioning.css:positioning/base/css.2*/
-#i272 { position: absolute; top: 0px; left: 0px; overflow: hidden; width: 300px; height: 250px;
         -ms-transform: translate(0, 0) translate(0, 0) rotate(0deg);
         -webkit-transform: translate(0, 0) translate(0, 0) rotate(0deg);
         -moz-transform: translate(0, 0) translate(0, 0) rotate(0deg);
@@ -940,8 +913,6 @@ url('fonts/') format('svg');
 <div id="i4" class="panel-content-holder">
     <!--#i4.i20.shape.html:shape/html-->
 <div id="i20"></div>
-<!--#/#--><!--#i4.i258.image.html:image/html-->
-<img id="i258" src="https://i.imgur.com/ItwVqDV.png"/>
 <!--#/#--><!--#i4.i14.text.html:text/html-->
 <div id="i14">Consigue los mejores descuentos para tu mascota</div>
 <!--#/#--><!--#i4.i130.image.html:image/html-->
@@ -964,8 +935,6 @@ url('fonts/') format('svg');
 <div id="i5" class="panel-content-holder">
     <!--#i5.i30.shape.html:shape/html-->
 <div id="i30"></div>
-<!--#/#--><!--#i5.i262.image.html:image/html-->
-<img id="i262" src="https://i.imgur.com/ItwVqDV.png"/>
 <!--#/#--><!--#i5.i58.image.html:image/html-->
 <img id="i58" src="https://i.imgur.com/DSj17IY.jpg"/>
 <!--#/#--><!--#i5.i292.image.html:image/html-->
@@ -988,14 +957,12 @@ url('fonts/') format('svg');
 <div id="i6" class="panel-content-holder">
     <!--#i6.i40.shape.html:shape/html-->
 <div id="i40"></div>
-<!--#/#--><!--#i6.i272.image.html:image/html-->
-<img id="i272" src="https://i.imgur.com/ItwVqDV.png"/>
 <!--#/#--><!--#i6.i298.text.html:text/html-->
 <div id="i298">Consigue los mejores descuentos para tu mascota</div>
 <!--#/#--><!--#i6.i60.image.html:image/html-->
 <img id="i60" src="https://i.imgur.com/fxb4Ta6.jpg"/>
 <!--#/#--><!--#i6.i296.image.html:image/html-->
-<img id="i296" src="https://i.imgur.com/2lTJBst.png"/>
+<img id="i296" src="https://i.imgur.com/03zv6Ev.png"/>
 <!--#/#--><!--#i6.i306.image.html:image/html-->
 <img id="i306" src="https://i.imgur.com/x24CapG.png"/>
 <!--#/#--><!--#i6.i99.shape.html:shape/html-->
@@ -1046,10 +1013,6 @@ document.getElementById('i2').addEventListener('showPrevious', function(e){
 document.getElementById('i2').addEventListener('showNext', function(e){
     cube_i2.rotate(cube_i2.ROTATE_NEXT)
 });
-/*#/#*//*#i4.i258.image.js:image/base/js*/
-
-/*#/#*//*#i258.i259.positioning.js:positioning/base/js.2*/
-bmShow('i258');
 /*#/#*//*#i4.i130.image.js:image/base/js*/
 
 /*#/#*//*#i4.i181.image.js:image/base/js*/
@@ -1129,10 +1092,6 @@ if ('click' === 'click') {
 
 /*#/#*//*#i50.i51.actions-clicktag.js:actions-clicktag/base/js.1*/
 
-/*#/#*//*#i5.i262.image.js:image/base/js*/
-
-/*#/#*//*#i262.i263.positioning.js:positioning/base/js.2*/
-bmShow('i262');
 /*#/#*//*#i5.i58.image.js:image/base/js*/
 
 /*#/#*//*#i5.i292.image.js:image/base/js*/
@@ -1212,10 +1171,6 @@ if ('click' === 'click') {
 
 /*#/#*//*#i52.i53.actions-clicktag.js:actions-clicktag/base/js.1*/
   
-/*#/#*//*#i6.i272.image.js:image/base/js*/
-
-/*#/#*//*#i272.i273.positioning.js:positioning/base/js.2*/
-bmShow('i272');
 /*#/#*//*#i6.i60.image.js:image/base/js*/
 
 /*#/#*//*#i6.i296.image.js:image/base/js*/
@@ -1266,7 +1221,7 @@ var el = document.getElementById('i302');
 
 el.addEventListener('click', function(e){
     /*#i310.i311.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://www.whatsapp.com'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'whatsapp://send?text=https://www.petco.com.mx/petco/en/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1326,11 +1281,6 @@ customName: 1;
 name: Background;
 /*#/#*//*#i20.i21.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
-/*#/#*//*#i4.i258.image.meta:image/meta*/
-name: MARCO; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: 1;
-/*#/#*//*#i258.i259.positioning.meta:positioning/meta.2*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i4.i14.text.meta:text/meta*/
 name: Texto; customName: 1;
 /*#/#*//*#i14.i15.positioning.meta:positioning/meta.1*/
@@ -1375,11 +1325,6 @@ data: /*!*/{"keepAspectRatio":true}/*!*/;
 name: Background;
 /*#/#*//*#i30.i31.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
-/*#/#*//*#i5.i262.image.meta:image/meta*/
-name: MARCO; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: 1;
-/*#/#*//*#i262.i263.positioning.meta:positioning/meta.2*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i5.i58.image.meta:image/meta*/
 name: Imagen de Cuadro; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
@@ -1424,11 +1369,6 @@ data: /*!*/{"keepAspectRatio":true}/*!*/;
 name: Background;
 /*#/#*//*#i40.i41.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
-/*#/#*//*#i6.i272.image.meta:image/meta*/
-name: MARCO; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: 1;
-/*#/#*//*#i272.i273.positioning.meta:positioning/meta.2*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i6.i298.text.meta:text/meta*/
 name: Texto copy 2; customName: 1;
 /*#/#*//*#i298.i299.positioning.meta:positioning/meta.1*/
