--- a/PETCO_2/VENETIAN/main/Venetian.html
+++ b/PETCO_2/VENETIAN/main/Venetian.html
@@ -2471,7 +2471,7 @@ var el = document.getElementById('i93');
 
 el.addEventListener('click', function(e){
     /*#i99.i100.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://www.whatsapp.com'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'whatsapp://send?text=https://www.petco.com.mx/petco/en/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
