correcciones del punto y viuda

--- a/PETCO_2/CUBE/main/Cube.html
+++ b/PETCO_2/CUBE/main/Cube.html
@@ -642,10 +642,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i14 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 16px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -5px;}
 /*#/#*//*#i14.i15.positioning.css:positioning/base/css.1*/
 #i14 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 252px; height: 58px;
-        -ms-transform: translate(-50%, -50%) translate(0px, 86px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(0px, 86px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(0px, 86px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(0px, 86px) rotate(0deg);
+        -ms-transform: translate(-50%, -50%) translate(0px, 93px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(0px, 93px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(0px, 93px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(0px, 93px) rotate(0deg);
 }
 /*#/#*//*#i4.i130.image.css:image/base/css*/
 #i130 { opacity: 1; }
@@ -754,10 +754,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i290 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 16px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); }
 /*#/#*//*#i290.i291.positioning.css:positioning/base/css.1*/
 #i290 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 252px; height: 58px;
-        -ms-transform: translate(-50%, -50%) translate(0px, 86px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(0px, 86px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(0px, 86px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(0px, 86px) rotate(0deg);
+        -ms-transform: translate(-50%, -50%) translate(0px, 93px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(0px, 93px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(0px, 93px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(0px, 93px) rotate(0deg);
 }
 /*#/#*//*#i5.i95.shape.css:shape/base/css*/
 #i95 { background-color: #dedede; opacity: 0.00;
@@ -812,10 +812,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i298 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 16px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); }
 /*#/#*//*#i298.i299.positioning.css:positioning/base/css.1*/
 #i298 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 252px; height: 58px;
-        -ms-transform: translate(-50%, -50%) translate(0px, 86px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(0px, 86px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(0px, 86px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(0px, 86px) rotate(0deg);
+        -ms-transform: translate(-50%, -50%) translate(0px, 93px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(0px, 93px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(0px, 93px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(0px, 93px) rotate(0deg);
 }
 /*#/#*//*#i6.i60.image.css:image/base/css*/
 #i60 { opacity: 1; }
@@ -914,7 +914,7 @@ url('fonts/') format('svg');
     <!--#i4.i20.shape.html:shape/html-->
 <div id="i20"></div>
 <!--#/#--><!--#i4.i14.text.html:text/html-->
-<div id="i14">Consigue los mejores descuentos para tu mascota</div>
+<div id="i14">Consigue los mejores descuentos para tu mascota.</div>
 <!--#/#--><!--#i4.i130.image.html:image/html-->
 <img id="i130" src="https://i.imgur.com/wAZD0eo.gif"/>
 <!--#/#--><!--#i4.i181.image.html:image/html-->
@@ -942,7 +942,7 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i5.i294.image.html:image/html-->
 <img id="i294" src="https://i.imgur.com/XQ9Ch5v.png"/>
 <!--#/#--><!--#i5.i290.text.html:text/html-->
-<div id="i290">Consigue los mejores descuentos para tu mascota</div>
+<div id="i290">Consigue los mejores descuentos para tu mascota.</div>
 <!--#/#--><!--#i5.i95.shape.html:shape/html-->
 <div id="i95"></div>
 <!--#/#--><!--#i5.i288.image.html:image/html-->
@@ -958,7 +958,7 @@ url('fonts/') format('svg');
     <!--#i6.i40.shape.html:shape/html-->
 <div id="i40"></div>
 <!--#/#--><!--#i6.i298.text.html:text/html-->
-<div id="i298">Consigue los mejores descuentos para tu mascota</div>
+<div id="i298">Consigue los mejores descuentos para tu mascota.</div>
 <!--#/#--><!--#i6.i60.image.html:image/html-->
 <img id="i60" src="https://i.imgur.com/fxb4Ta6.jpg"/>
 <!--#/#--><!--#i6.i296.image.html:image/html-->
