"en" en vez de "Con"

--- a/PETCO_2/FadeGeo300x600.html
+++ b/PETCO_2/FadeGeo300x600.html
@@ -401,7 +401,7 @@
        
         <div class="tgx_text"> 
                          <span class="tgx_text_title">
-              Consigue las mejores promociones para tu mascota con tu <b>Club Petco.</b>
+              Consigue las mejores promociones para tu mascota en tu <b>Club Petco.</b>
             </span> <br>
                         <span class="tgx_text_medium" style="color: black;line-height:1.1em; font-size:22px; width:95%; text-align:center;">
                         <p style="margin-top: 11px; line-height: 1.1em; margin-left: 5px; margin-bottom: 10px ">
