--- a/PETCO_2/VENETIAN/main/Venetian.html
+++ b/PETCO_2/VENETIAN/main/Venetian.html
@@ -2324,7 +2324,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i46.image.html:image/html-->
 <img id="i46" src="https://i.imgur.com/XQ9Ch5v.png"/>
 <!--#/#--><!--#i68.text.html:text/html-->
-<div id="i68">Consigue las mejores promociones para tu mascota con tu Club Petco.</div>
+<div id="i68">Consigue las mejores promociones para tu mascota en tu Club Petco.</div>
 <!--#/#--><!--#i79.shape.html:shape/html-->
 <div id="i79"></div>
 <!--#/#--><!--#i81.shape.html:shape/html-->
@@ -2544,7 +2544,7 @@ customName: 1;
 /*#/#*//*#i46.i47.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i68.text.meta:text/meta*/
-name: Consigue las mejores promociones para tu mascota con tu Club Petco.; customName: false;
+name: Consigue las mejores promociones para tu mascota en tu Club Petco.; customName: false;
 /*#/#*//*#i68.i69.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i79.shape.meta:shape/meta*/
