--- a/PETCO_2/ZoomExp300x600.html
+++ b/PETCO_2/ZoomExp300x600.html
@@ -174,7 +174,7 @@ a {text-decoration: none;}
   </ol>
 </div>
 
- <div class="ism_text"> <span class="" style="font-family:Arial; color:#000000; font-size:22px;  text-decoration: none;">Consigue las mejores promociones para tu mascota con tu <b>Club Petco.</b></span><br>
+ <div class="ism_text"> <span class="" style="font-family:Arial; color:#000000; font-size:22px;  text-decoration: none;">Consigue las mejores promociones para tu mascota en tu <b>Club Petco.</b></span><br>
 
                    
                    </div>
