--- a/PRINGLES/Venetian.html
+++ b/PRINGLES/Venetian.html
@@ -2228,11 +2228,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i46.image.css:image/base/css*/
 #i46 { opacity: 1; }
 /*#/#*//*#i46.i47.positioning.css:positioning/base/css.2*/
-#i46 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 220px; height: 59px;
-        -ms-transform: translate(0, 0) translate(50px, 299px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(50px, 299px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(50px, 299px) rotate(0deg);
-        transform: translate(0, 0) translate(50px, 299px) rotate(0deg);
+#i46 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 218px; height: 58px;
+        -ms-transform: translate(0, 0) translate(51px, 297px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(51px, 297px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(51px, 297px) rotate(0deg);
+        transform: translate(0, 0) translate(51px, 297px) rotate(0deg);
 }
 /*#/#*//*#i104.text.css:text/base/css*/
 #i104 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: Arial, Helvetica, sans-serif; font-size: 16px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
@@ -2312,7 +2312,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i16.image.html:image/html-->
 <img id="i16" src="https://i.imgur.com/7GR4Ait.png"/>
 <!--#/#--><!--#i46.image.html:image/html-->
-<img id="i46" src="https://i.imgur.com/bIdfN0E.png"/>
+<img id="i46" src="https://i.imgur.com/5xeuATm.png"/>
 <!--#/#--><!--#i104.text.html:text/html-->
 <div id="i104">¡Ponle sabor y color con Pringles!</div>
 <!--#/#--><!--#i63.text.html:text/html-->
