--- a/PRINGLES/fade.html
+++ b/PRINGLES/fade.html
@@ -287,7 +287,7 @@
             <div class="bzm_text"> <span class="bzm_text_title"><b>¡Ponle sabor y color a tu semana con Pringles! </b></span>
                </div>
 
-                <div class="cta" > <img src="https://i.imgur.com/bIdfN0E.png" style="height: 45px;"></a></div>
+                <div class="cta" > <img src="https://i.imgur.com/5xeuATm.png" style="height: 45px;"></a></div>
 
             <!-- LOGO -->
             <div class="logo"> <img id="logo" src="https://i.imgur.com/7GR4Ait.png" style="height:50px; margin-top:-18px; margin-left:250px;"></div>
