--- a/KfcSecreto/Video-Geo.html
+++ b/KfcSecreto/Video-Geo.html
@@ -240,8 +240,8 @@
             function onYouTubeIframeAPIReady() {
                 ytplayer = new YT.Player('ytplayer', {
                     height: '250',
-                    //width: '100%',
-                    videoId: 'mrn33_dtPJE',
+                    width: '600',
+                    videoId: 'XVL3z1bxVgo',
                     autoplay: 1,
                     playerVars: {
                         loop: 1,
