--- a/KfcSecreto/video300x250.html
+++ b/KfcSecreto/video300x250.html
@@ -288,11 +288,11 @@
                 ytplayer = new YT.Player('ytplayer', {
                     height: '170',
                     width: '300',
-                    videoId: 'mrn33_dtPJE',
+                    videoId: 'XVL3z1bxVgo',
                     autoplay: 1,
                     playerVars: {
                         loop: 1,
-                        controls: 0
+                        controls:0
                     },
                     events: {
                         'onReady': onPlayerReady,
