Corregido logo y tiempos

--- a/Alcanza_Capital/formulario-def.html
+++ b/Alcanza_Capital/formulario-def.html
@@ -435,23 +435,23 @@
         .item-1 {
             z-index: 2;
             opacity: 1;
-            animation: fade 12s infinite;
-            -webkit-animation: fade 12s infinite;
+            animation: fade 25s infinite;
+            -webkit-animation: fade 25s infinite;
         }
 
         .item-2 {
-            animation: fade2 12s infinite;
-            -webkit-animation: fade2 12s infinite;
+            animation: fade2 25s infinite;
+            -webkit-animation: fade2 25s infinite;
         }
 
         .item-3 {
-            animation: fade3 12s infinite;
-            -webkit-animation: fade3 12s infinite;
+            animation: fade3 25s infinite;
+            -webkit-animation: fade3 25s infinite;
         }
 
         .item-4 {
-            animation: fade4 12s infinite;
-            -webkit-animation: fade4 12s infinite;
+            animation: fade4 25s infinite;
+            -webkit-animation: fade4 25s infinite;
         }
 
         @keyframes fade {
@@ -615,10 +615,10 @@
                 <!--<iframe src="Formulario.html" width="306" height="605" frameborder="0" scrolling="no" position="absolute" style="margin-left: 0px; margin-top: -8px;"></iframe>-->
                 <form id="question" class="FR form">
                     <center>
-                    <span style="bottom:1px; text-align:center ; float:center; background-color: #fff;"> <img src="https://i.imgur.com/P28mYBB.png" style="height:120px; width: 310px; text-decoration: none; border-radius:0px; margin-top:0px; margin-left: -35px;
-    box-shadow:0 0 0px 0px #fff; margin-bottom: -5px;"></span>
+                    <span style="bottom:1px; text-align:center ; float:center; background-color: #fff;"> <img src="https://i.imgur.com/P28mYBB.png" style="height:80px; width: 230px; text-decoration: none; border-radius:0px; margin-top:25px; margin-left: 0px;
+    box-shadow:0 0 0px 0px #fff; margin-bottom: -15px;"></span>
 
-    <span style="bottom:5px; text-align:center ; float:center; background-color: #39c0e0;"> <img src="https://i.imgur.com/zRuYlRY.jpg" style="height:100px; width: 250px; text-decoration: none; border-radius:0px; margin-top:0px; margin-left: -5px; margin-bottom: -15px;"></span>
+    <span style="bottom:5px; text-align:center ; float:center; background-color: #39c0e0;"> <img src="https://i.imgur.com/zRuYlRY.jpg" style="height:100px; width: 250px; text-decoration: none; border-radius:0px; margin-top:0px; margin-left: -3px; margin-bottom: -5px;"></span>
 
                     
 
@@ -636,7 +636,7 @@
                     <span style="display: flex; flex-direction: row-reverse; justify-content: left; width: 100%; margin-top: 18px; margin-left: -10px;">
 
                         <label style="min-width: 80%" for="condiciones"><a href="https://www.alcanzacapital.mx/img/Aviso_Privacidad_Alcanza.pdf" target="_blank" style="font-size: 15px; font-family: Trebuchet MS; text-align: left; color: #105677;   ">He leído y acepto el
-<u><b>AVISO DE PRIVACIDAD</b></u></a><a href="https://www.alcanzacapital.mx/img/TerminosAlcanza.pdf" target="_blank" style="font-size: 15px; font-family: Trebuchet MS; text-align: left; color: #105677;  "> y los <u><b>TERMINOS Y CONDICIONES</b>.</u></a></label>
+<u><b>AVISO DE PRIVACIDAD</b></u></a><a href="https://www.alcanzacapital.mx/img/TerminosAlcanza.pdf" target="_blank" style="font-size: 15px; font-family: Trebuchet MS; text-align: left; color: #105677;  "> y los <u><b>TÉRMINOS Y CONDICIONES</b>.</u></a></label>
 
                         
                         <!--<input type="checkbox" width="10" name="condiciones2" style="text-align: left; background-color: red" /></span>
