--- a/Alcanza_Capital/formulario-def.html
+++ b/Alcanza_Capital/formulario-def.html
@@ -662,12 +662,12 @@
             <div class="FR red">
                 <center>
                 <span class="s-I" style="width: 320px; margin-left: -30px;"> 
-                    <img src="https://i.imgur.com/4FkTTg6.gif" style="height:260px; width: 310px;  text-decoration: none; border-radius:0px;
+                    <img src="https://i.imgur.com/QT551oE.gif" style="height:260px; width: 310px;  text-decoration: none; border-radius:0px;
     box-shadow:0 0 0px 0px #fff; margin-top: 0px;"></span>
 
                 <span class="s-II bzm_text_title  bzm_text_medium" style="margin-top: 30px;">
 
-                    <img src="https://i.imgur.com/cR1eixu.jpg" style="height:141px; width:300px; text-decoration: none; margin-left: -30px; margin-bottom: ">
+                    <img src="https://i.imgur.com/yCw3aET.jpg" style="height:141px; width:300px; text-decoration: none; margin-left: -30px; margin-bottom: ">
                 </span>
 
                 <span class="s-III" style="margin-top: -200px;">
