--- a/Alcanza_Capital/formulario-def.html
+++ b/Alcanza_Capital/formulario-def.html
@@ -312,7 +312,7 @@
         }
 
        <!-- .bg.cover-4 {
-            background: url("https://i.imgur.com/LH3bgpe.png");
+            background: url("https://i.imgur.com/yueC6ey.png");
             background-size: cover;
             
         }
