--- a/Michelin_2/main/Venetian.html
+++ b/Michelin_2/main/Venetian.html
@@ -2275,7 +2275,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i2.i5.slice-image.html:slice-image/html-->
 <dataimg id="i5" src="https://i.imgur.com/zwMxeKL.jpg"></dataimg>
 <!--#/#--><!--#i2.i6.slice-image.html:slice-image/html-->
-<dataimg id="i6" src="https://i.imgur.com/nKu6MA6.gif"></dataimg>
+<dataimg id="i6" src="https://i.imgur.com/yWVszeI.gif"></dataimg>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i105.image.html:image/html-->
@@ -2288,8 +2288,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <div id="i63">¡Este verano la 
 seguridad viaja contigo!</div>
 <!--#/#--><!--#i68.text.html:text/html-->
-<div id="i68">Gana premios ofreciendo tranquilidad
-a quienes más amas.</div>
+<div id="i68">Gana premios con nuestros productos hasta el 31 de Julio.</div>
 <!--#/#--><!--#i79.shape.html:shape/html-->
 <div id="i79"></div>
 <!--#/#--><!--#/#--><!--#js:common/js-->
@@ -2396,7 +2395,7 @@ name: TFL2rhT.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i5.slice-image.meta:slice-image/meta*/
 name: zwMxeKL.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i6.slice-image.meta:slice-image/meta*/
-name: nKu6MA6.gif; fileId: ; sourceTypeId: externalUrl;
+name: yWVszeI.gif; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i3.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i105.image.meta:image/meta*/
@@ -2419,7 +2418,7 @@ name: ¡Este verano la  seguridad viaja contigo!; customName: false;
 /*#/#*//*#i63.i64.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i68.text.meta:text/meta*/
-name: Gana premios ofreciendo tranquilidad a quienes más amas.; customName: false;
+name: Gana premios con nuestros productos hasta el 31 de Julio.; customName: false;
 /*#/#*//*#i68.i69.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i79.shape.meta:shape/meta*/
