--- a/Michelin_2/Cube/main/Cube.html
+++ b/Michelin_2/Cube/main/Cube.html
@@ -865,9 +865,9 @@ url('fonts/') format('svg');
     <!--#i6.i40.shape.html:shape/html-->
 <div id="i40"></div>
 <!--#/#--><!--#i6.i34.text.html:text/html-->
-<div id="i34">¡Gana premios por la compra de nuestros productos!</div>
+<div id="i34">¡Gana premios con nuestros productos hasta el 31 de julio!</div>
 <!--#/#--><!--#i6.i60.image.html:image/html-->
-<img id="i60" src="https://i.imgur.com/up6ff4Z.gif"/>
+<img id="i60" src="https://i.imgur.com/fAMtLKG.gif"/>
 <!--#/#--><!--#i6.i284.image.html:image/html-->
 <img id="i284" src="https://i.imgur.com/8jl0nuA.png"/>
 <!--#/#--><!--#i6.i282.image.html:image/html-->
