Correcciones con máscota

--- a/Michelin_2/Cube/main/Cube.html
+++ b/Michelin_2/Cube/main/Cube.html
@@ -835,7 +835,7 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i4.i14.text.html:text/html-->
 <div id="i14">Este verano la seguridad viaja contigo.</div>
 <!--#/#--><!--#i4.i130.image.html:image/html-->
-<img id="i130" src="https://i.imgur.com/2wj8lnG.jpg"/>
+<img id="i130" src="https://i.imgur.com/0dxrAoG.jpg"/>
 <!--#/#--><!--#i4.i181.image.html:image/html-->
 <img id="i181" src="https://i.imgur.com/skpFCYl.png"/>
 <!--#/#--><!--#i4.i260.image.html:image/html-->
@@ -849,7 +849,7 @@ url('fonts/') format('svg');
     <!--#i5.i30.shape.html:shape/html-->
 <div id="i30"></div>
 <!--#/#--><!--#i5.i24.text.html:text/html-->
-<div id="i24">Ofrecemos tranquilidad para quienes mas amas.</div>
+<div id="i24">Ofrecemos tranquilidad para quienes más amas.</div>
 <!--#/#--><!--#i5.i58.image.html:image/html-->
 <img id="i58" src="https://i.imgur.com/GsqwNbt.jpg"/>
 <!--#/#--><!--#i5.i278.image.html:image/html-->
