--- a/Michelin_2/main/Venetian.html
+++ b/Michelin_2/main/Venetian.html
@@ -2273,7 +2273,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i2.i4.slice-image.html:slice-image/html-->
 <dataimg id="i4" src="https://i.imgur.com/TFL2rhT.jpg"></dataimg>
 <!--#/#--><!--#i2.i5.slice-image.html:slice-image/html-->
-<dataimg id="i5" src="https://i.imgur.com/zwMxeKL.jpg"></dataimg>
+<dataimg id="i5" src="https://i.imgur.com/YcDtSeW.jpg"></dataimg>
 <!--#/#--><!--#i2.i6.slice-image.html:slice-image/html-->
 <dataimg id="i6" src="https://i.imgur.com/yWVszeI.gif"></dataimg>
 <!--#/#-->
@@ -2393,7 +2393,7 @@ customName: ;
 /*#/#*//*#i2.i4.slice-image.meta:slice-image/meta*/
 name: TFL2rhT.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i5.slice-image.meta:slice-image/meta*/
-name: zwMxeKL.jpg; fileId: ; sourceTypeId: externalUrl;
+name: YcDtSeW.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i6.slice-image.meta:slice-image/meta*/
 name: yWVszeI.gif; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i3.positioning.meta:positioning/meta.1*/
