--- a/Michelin_2/ZoomExp300x600.html
+++ b/Michelin_2/ZoomExp300x600.html
@@ -162,10 +162,10 @@ a {text-decoration: none;}
 <div class="ism-slider" data-transition_type="zoom" data-play_type="loop" data-interval="3000" data-image_fx="zoompan" data-buttons="false" data-radios="false" id="my-slider" style="width: 300px; height: 450px; border-radius: none;">
   <ol>
     <li>
-      <img src="https://i.imgur.com/ADe4lvl.jpg">
+      <img src="https://i.imgur.com/auZgcz5.jpg">
       
     <li>
-      <img src="https://i.imgur.com/auZgcz5.jpg">
+      <img src="https://i.imgur.com/vpL3eQO.jpg">
       
     <li>
       <img src="https://i.imgur.com/jjSeg4z.gif">
