--- a/Beat2/FadeBig.html
+++ b/Beat2/FadeBig.html
@@ -66,7 +66,7 @@
         }
 
         .bg.cover-2 {
-            background: url("https://i.imgur.com/zhq7zOS.png");
+            background: url("https://i.imgur.com/A8zbhy3.jpg");
             background-size: cover;
             
         }
